# nldtool

./: .gitignore  .gitlab-ci.yml  AUTHORS  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml
examples/: create_crypto_template.sh  crypto_factory.h  crypto_options.h  main.cpp  print_config_template.xml  publications.tex  sources.cmake
examples/ascon/: ascon.cpp  ascon.h  sources.cmake
examples/dha256/: dha256.cpp  dha256.h  sources.cmake
examples/has160/: has160.cpp  has160.h  sources.cmake
examples/icepole/: icepole.cpp  icepole.h  sources.cmake
examples/keccak/: keccak.cpp  keccak.h  sources.cmake
examples/ketje/: ketje.cpp  ketje.h  sources.cmake
examples/md4/: md4.cpp  md4.h  sources.cmake
examples/md5/: md5.cpp  md5.h  sources.cmake
examples/ripemd128/: ripemd128.cpp  ripemd128.h  sources.cmake
examples/ripemd160/: ripemd160.cpp  ripemd160.h  sources.cmake
examples/salsa/: salsa.cpp  salsa.h  sources.cmake
examples/sha1/: sha1.cpp  sha1.h  sources.cmake
examples/sha2/: sha2.cpp  sha2.h  sources.cmake
examples/siphash/: siphash.cpp  siphash.h  sources.cmake
examples/skein/: skein.cpp  skein.h  (+1 more)
src/: bit_matrix.cpp  bit_matrix.h  bitmask.cpp  bitmask.h  bitpos.h  bitslice.h  bitslice_data.h  bitslice_pair.h  bitslice_step.h  bitslice_step_data.h  bitslice_twobit_condition.h  cache.h  cache_base.h  cache_manager.cpp  cache_manager.h  carry_step.h  change.cpp  change.h  characteristic.cpp  characteristic.h  condition.cpp  condition.h  condition_container.h  condition_proxy.cpp  condition_proxy.h  condition_word.cpp  condition_word.h  container_condition_proxy.cpp  container_condition_proxy.h  crypto.cpp  crypto.h  dynamic_cache.h  functions.cpp  functions.h  horizontal_condition_word.cpp  horizontal_condition_word.h  index.h  konstant_condition_proxy.cpp  konstant_condition_proxy.h  latex_print_visitor.cpp  (+54 more)
(+264 files in other folders)
